<resources>
    <string name="app_name">Driver Hiring app</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_Cars">Cars</string>
    <string name="menu_Ride_History">Ride History</string>
    <string name="menu_Transactions">Transactions</string>
    <string name="menu_Logout">Logout</string>


    <string-array name="cars_array">
        <item>BMW</item>
        <item>Audi</item>
        <item>Ferrari</item>
        <item>Jaguar</item>
        <item>Verna</item>
        <item>Sedan</item>
        <item>XUV</item>
        <item>Lambeorghini</item>
    </string-array>

    <string-array name="Type_of_car">
        <item>HatchBack</item>
        <item>Sedan</item>
        <item>Luxury Sedan</item>
        <item>Coupe</item>
        <item>Sports Car</item>
        <item>MUV</item>
    </string-array>


    <string-array name="choose_transmission_array">
        <item>Automatic</item>
        <item>Manual</item>

    </string-array>

    <string-array name="choose_fuel_type">
        <item>Petrol</item>
        <item>Diesel</item>
        <item>CNG</item>

    </string-array>
    <string name="title_activity_drawer02">DrawerActivity02</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer_for_driver">Drawer_Activity_For_Driver</string>


</resources>