<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myprofile"
            android:title="@string/menu_myprofile" />
        <item
            android:id="@+id/nav_cars"
            android:title="@string/menu_Cars" />
        <item
            android:id="@+id/nav_ride_history"
            android:title="@string/menu_Ride_History" />
        <item
            android:id="@+id/nav_Transactions"
            android:title="@string/menu_Transactions"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_Logout" />
    </group>
</menu>